content/consul/v1.8.x/content/commands/catalog/services.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: commands
page_title: 'Commands: Catalog List Services'
sidebar_title: services
---

# Consul Catalog List Services

Command: `consul catalog services`

The `catalog services` command prints all known services. It can also query
for services that match particular metadata or list the services that a
particular node provides.

## Examples

List all services:

```shell-session
$ consul catalog services
consul
postgresql
redis
```

Show all services with their tags:

```shell-session
$ consul catalog services -tags
consul
postgresql  leader
redis       primary,v1
```

List services for the node "worker-01":

```shell-session
$ consul catalog services -node=worker-01
consul
redis
```

## Usage

Usage: `consul catalog services [options]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

#### Catalog List Nodes Options

- `-node=<id or name>` - Node `id or name` for which to list services.

- `-node-meta=<key=value>` - Metadata to filter nodes with the given
  `key=value` pairs. If specified, only services running on nodes matching the
  given metadata will be returned. This flag may be specified multiple times to
  filter on multiple sources of metadata.

- `-tags` - Display each service's tags as a comma-separated list beside each
  service entry.
